Add images folder

--- a/recipes/cheesecake.html
+++ b/recipes/cheesecake.html
@@ -2,20 +2,18 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title> Butter Chicken </title>
+        <title> Cheesecake </title>
     </head>
     <body>
-        <h1> Butter Chicken </h1>
-
-        <img src="../images/butter-chicken.jpeg">
-
+        <h1> Cheesecake </h1>
+        <img src="../images/cheesecake.jpeg" alt="Picture of a delicious cheesecake"/>
         <h2> Description </h2>
-        <p> This is the most delicious Indian meal ever </p>
+        <p> This is the most delicious <strong>meal</strong> ever </p>
 
         <h2> Ingredients </h2>
         <ul>
-            <li> Butter </li>
-            <li> Chicken </li>
+            <li> Cheese </li>
+            <li> Cake </li>
         </ul>
 
         <h2> Steps </h2>
