--- a/recipes/pad-thai.html
+++ b/recipes/pad-thai.html
@@ -2,20 +2,18 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title> Butter Chicken </title>
+        <title> Pad Thai </title>
     </head>
     <body>
-        <h1> Butter Chicken </h1>
-
-        <img src="../images/butter-chicken.jpeg">
-
+        <h1> Pad Thai </h1>
+        <img src="../images/pad-thai.webp" alt="Picture of deliciso Pad Thai"/>
         <h2> Description </h2>
-        <p> This is the most delicious Indian meal ever </p>
+        <p> This is the most delicious Thai meal ever </p>
 
         <h2> Ingredients </h2>
         <ul>
-            <li> Butter </li>
-            <li> Chicken </li>
+            <li> Pad </li>
+            <li> Thai </li>
         </ul>
 
         <h2> Steps </h2>
