--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
         <title> Odin Recipes </title>
     </head>
     <body>
-
-
+        <h1> Odin Recipes </h1>
+        <ul>
+            <li><a href="./recipes/butter-chicken.html"> Butter Chicken </a></li>
+            <li><a href="./recipes/cheesecake.html"> Cheesecake </a></li>
+            <li><a href="./recipes/pad-thai.html"> Pad Thai </a></li>
+        </ul>
 
     </body>
 </html>
